<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <ImageView
        android:id="@+id/imgFlagLarge"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/flag"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_flag_placeholder"
        app:layout_constraintDimensionRatio="16:9" />
    <!-- لو بتحبي ارتفاع ثابت بدل النسبة: احذفي السطر الأخير وحطي
         android:layout_height="220dp" -->

    <TextView
        android:id="@+id/tvNameDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Turkey"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/imgFlagLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- العاصمة تحت الاسم -->
    <TextView
        android:id="@+id/tvCapitalDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Capital: Ankara"
        android:textSize="16sp"
        android:textColor="@color/my_dark_primary"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvNameDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvCapitalDetail"
        app:layout_constraintBottom_toTopOf="@id/btnRow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Country description goes here..."
            android:textSize="17sp"
            android:textColor="@color/black"
            android:lineSpacingExtra="2dp" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/btnRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/delete" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
